@@ -1,3 +1,28 @@
+package EPrints::Plugin::Screen::Admin::WorkflowEdit::ConditionElement;
+our @ISA = ( 'EPrints::Plugin::Screen::Admin::WorkflowEdit::WorkflowElement' );
+
+sub new
+{
+	my( $class ) = @_;
+	my $self = $class->SUPER::new();
+	$self->{exp_attrs} = {
+		"test" => [1],
+	};
+	return $self;
+}
+
+package EPrints::Plugin::Screen::Admin::WorkflowEdit::AttributeElement;
+our @ISA = ( 'EPrints::Plugin::Screen::Admin::WorkflowEdit::WorkflowElement' );
+
+sub new
+{
+	my( $class ) = @_;
+	my $self = $class->SUPER::new();
+	$self->{name} = "";
+	$self->{value} = "";
+	return $self;
+}
+
 package EPrints::Plugin::Screen::Admin::WorkflowEdit::WorkflowElement;
 
 use strict;
@@ -6,17 +31,199 @@ sub new
 {
 	my( $class ) = @_;
 	my $self = {};
-	$self->{contains} = {};
+
+	$self->{exp_contents} = {
+		"FlowElement" => [1, "*"],
+		"StageElement" => [1, "*"],
+	};
 	$self->{contents} = [];
+	$self->{tag} = "workflow";	
+	$self->{exp_attrs} = {};
+	$self->{attrs} = [];
+
 	$self->{counters} = {};
+	$self->{conditions} = [];
+
 	bless $self, $class;
 	return $self;
+}
+
+sub render
+{
+	my( $self, $session ) = @_;
+
+	my $out = $session->make_element( "div" );#, style => "margin: 1pt; border: solid black 1px" ); 
+	
+	$out->appendChild( $session->make_text( $self->{tag} ) );	
+	
+	foreach my $condition ( @{$self->{conditions}} )
+	{
+		my $test = $condition->get_attribute( "test" );
+		my $cond = $session->make_element( "div", class => "we_conditional" );
+		$cond->appendChild( $session->make_text( "Condition: ".$test ) );
+		$out->appendChild( $cond );
+	}
+	
+	my $contents = $self->{contents};
+	foreach my $content ( @$contents )
+	{
+		$out->appendChild( $content->render( $session ) );	
+	}
+	return $out;	
+}
+
+sub tag_map
+{
+	my $tagmap =
+	{
+		"stage" => "StageElement",
+		"component" => "ComponentElement",
+		"flow" => "FlowElement",
+		"field" => "FieldElement",
+		"help" => "HelpElement",
+		"title" => "TitleElement",
+		"workflow" => "WorkflowElement",
+	};
+
+	return $tagmap; 
+}
+
+sub get_attribute
+{
+	my( $self, $name ) = @_;
+
+	foreach my $attribute ( @{$self->{attrs}} )
+	{
+		if( $attribute->{name} eq $name )
+		{
+			return $attribute->{value};
+		}
+	}
+	return undef;
+}
+
+sub to_dom
+{
+	my( $self, $session, $skip_children ) = @_;
+	my $root = $session->make_doc_fragment;
+	my $currnode = $root;
+	
+	$skip_children = 0 if( !defined $skip_children );
+	
+	foreach my $condition ( @{$self->{conditions}} )
+	{
+		my $if = $session->make_element( "if" );
+		foreach my $attribute ( @{$condition->{attrs}} )
+		{
+			if( $attribute->{name} eq "test" )
+			{
+				$if->setAttribute( "test", $attribute->{value} );
+			}
+			last;
+		}
+		$currnode->appendChild( $if );
+		$currnode = $if;	
+	}
+
+	my $el = $session->make_element( $self->{tag} );
+
+	foreach my $attr ( @{$self->{attrs}} )
+	{
+		$el->setAttribute( $attr->{name}, $attr->{value} );
+	}
+
+	if( !$skip_children )
+	{
+		foreach my $element ( @{$self->{contents}} )
+		{
+			$el->appendChild( $element->to_dom( $session ) );
+		}
+	}
+	$currnode->appendChild( $el );
+	return $root;
+}
+
+sub element_from_dom
+{
+	my( $dom ) = @_;
+	
+	my $condition;
+	my $node = $dom;
+	my $tagmap = EPrints::Plugin::Screen::Admin::WorkflowEdit::WorkflowElement::tag_map();
+	if( $node->getNodeName() eq "if" )
+	{
+		$condition = EPrints::Plugin::Screen::Admin::WorkflowEdit::ConditionElement->new_from_dom( $node );
+		my $children = $node->getChildNodes();
+		my $ok = 0;
+		for my $child( @$children )
+		{
+			my $name = $child->getNodeName();
+			next unless( $tagmap->{$name} || $name eq "if" );
+			$node = $child;
+			$ok = 1;
+			last;
+		}
+		return unless $ok;
+	}
+	my $name = $node->getNodeName();
+
+	return undef if( !$tagmap->{$name} );
+	my $element_class = "EPrints::Plugin::Screen::Admin::WorkflowEdit::".$tagmap->{$name};
+	my $element = $element_class->new_from_dom( $node );
+
+	$element->add_condition( $condition ) if defined $condition;
+	return $element;
+}
+
+sub new_from_dom
+{
+	my( $class, $dom, $skip_children ) = @_;
+
+	$skip_children = 0 if( !defined $skip_children );
+
+	my $element = $class->new();
+	
+	foreach my $attr ( keys %{$element->{exp_attrs}} )
+	{
+		next unless $dom->hasAttribute( $attr );
+
+		my $attrib = new EPrints::Plugin::Screen::Admin::WorkflowEdit::AttributeElement();
+		$attrib->{name} = $attr;
+		$attrib->{value} = $dom->getAttribute( $attr );
+		$element->add_attribute( $attrib );				
+	}	
+
+	return $element if( $dom->getNodeName() eq "if" || $skip_children );
+	my $tagmap = EPrints::Plugin::Screen::Admin::WorkflowEdit::WorkflowElement::tag_map();
+	my $children = $dom->getChildNodes();
+	foreach my $child ( @$children )
+	{
+		my $name = $child->getNodeName();
+		next unless ( $tagmap->{$name} || $name eq "if" );
+
+		$element->add_element( 
+			EPrints::Plugin::Screen::Admin::WorkflowEdit::WorkflowElement::element_from_dom( $child ) 
+		);
+	}
+	return $element;
+}
+
+sub add_condition
+{
+	my( $self, $condition ) = @_;
+	push @{$self->{conditions}}, $condition; 
+}
+
+sub add_attribute
+{
+	my( $self, $attribute ) = @_;
+	push @{$self->{attrs}}, $attribute; 
 }
 
 sub add_element
 {
 	my( $self, $element ) = @_;
-	
+
 	my $type = ref $element;
 	$type =~ s/EPrints::Plugin::Screen::Admin::WorkflowEdit:://;
 		
@@ -28,6 +235,10 @@ sub add_element
 			$self->{counters}->{$type} = 0;
 		}
 		$self->{counters}->{$type}++;
+	}
+	else
+	{
+		print STDERR "Can't add $type to $self\n";
 	}
 }
 
@@ -42,16 +253,16 @@ sub can_add
 	}
 
 	my $count = $self->{counters}->{$type};
-	my( $min, $max ) = @{$self->{contains}->{$type}};
+	my( $min, $max ) = @{$self->{exp_contents}->{$type}};
 	$count++;
-	return 0 if( $count > $max && $max != -1 );
+	return 0 if( $count > $max && $max ne "*" );
 	return 1;
 }
 
 sub can_contain
 {
 	my( $self, $type ) = @_;
-	return 1 if( $self->{contains}->{$type} );
+	return 1 if( $self->{exp_contents}->{$type} );
 	return 0;
 }
 
@@ -59,12 +270,12 @@ sub is_valid
 {
 	my( $self ) = @_;
 	
-	foreach my $type ( keys %{$self->{contains}} )
+	foreach my $type ( keys %{$self->{exp_contents}} )
 	{
 		my $count = $self->{counters}->{$type};	
-		my( $min, $max ) = @{$self->{contains}->{$type}};
+		my( $min, $max ) = @{$self->{exp_contents}->{$type}};
 		return 0 if( $count < $min );
-		return 0 if( $count > $max && $max != -1 );
+		return 0 if( $count > $max && $max ne "*" );
 		foreach my $content ( @{$self->{contents}} )
 		{
 			return 0 unless( $content->is_valid );
@@ -81,9 +292,11 @@ sub new
 {
 	my( $class ) = @_;
 	my $self = $class->SUPER::new();
-	$self->{contains} = {
-		"StageElement" => [1, -1],
+	$self->{exp_contents} = {
+		"StageElement" => [1, "*"],
 	};
+	
+	$self->{tag} = "flow";
 	return $self;
 }
 
@@ -94,12 +307,56 @@ sub new
 {
 	my( $class ) = @_;
 	my $self = $class->SUPER::new();
-	$self->{contains} = {
-		"ComponentElement" => [1, -1],
+	$self->{exp_contents} = {
+		"ComponentElement" => [0, "*"],
 	};
+	$self->{exp_attrs} = {
+		"ref" => [1],
+		"name" => [1],
+	};
+
+	$self->{tag} = "stage";
 	return $self;
 }
 
+sub render
+{
+	my( $self, $session ) = @_;
+
+	my $out = $session->make_element( "div", class => "we_stage" );
+	
+	foreach my $condition ( @{$self->{conditions}} )
+	{
+		my $test = $condition->get_attribute( "test" );
+		my $cond = $session->make_element( "div", class => "we_conditional" );
+		$cond->appendChild( $session->make_text( "Condition: ".$test ) );
+		$out->appendChild( $cond );
+	}
+
+	my $name = $self->get_attribute( "name" );
+	my $ref = $self->get_attribute( "ref" );
+	
+	if( $name ) 
+	{
+		my $title_bar = $session->make_element( "div", class => "we_stage_bar" ); 
+		my $title = $session->make_element( "div", class => "we_stage_title" );
+		my $text = "Stage (".$self->get_attribute( "name" ).")";
+		$title->appendChild( $session->make_text( $text ) );
+		$title_bar->appendChild( $title );
+		$out->appendChild( $title_bar );
+	}
+	elsif( $ref )
+	{
+		$out->appendChild( $session->make_text( "Stage Ref (".$self->get_attribute( "ref" ).")" ) );
+	}
+
+	my $contents = $self->{contents};
+	foreach my $content ( @$contents )
+	{
+		$out->appendChild( $content->render( $session ) );	
+	}
+	return $out;	
+}
 
 package EPrints::Plugin::Screen::Admin::WorkflowEdit::ComponentElement;
 our @ISA = ( 'EPrints::Plugin::Screen::Admin::WorkflowEdit::WorkflowElement' );
@@ -108,25 +365,220 @@ sub new
 {
 	my( $class ) = @_;
 	my $self = $class->SUPER::new();
-	$self->{contains} = {
-		"TitleElement" => [0, -1],
-		"HelpElement" => [0, -1],
-		"FieldElement" => [0, -1],
+	$self->{exp_contents} = {
+		"TitleElement" => [0, "*"],
+		"HelpElement" => [0, "*"],
+		"FieldElement" => [0, "*"],
 	};
+	
+	$self->{exp_attrs} = {
+		"surround" => [1], 
+		"collapse" => [1], 
+		"type" => [1], 
+	};
+
+	$self->{tag} = "component";
 	return $self;
 }
 
+sub render
+{
+	my( $self, $session ) = @_;
+
+	my $out = $session->make_element( "div", class => "ep_sr_component" );
+	
+	foreach my $condition ( @{$self->{conditions}} )
+	{
+		my $test = $condition->get_attribute( "test" );
+		my $cond = $session->make_element( "div", class => "we_conditional" );
+		$cond->appendChild( $session->make_text( "Condition: ".$test ) );
+		$out->appendChild( $cond );
+	}
+
+	my $cont_div = $session->make_element( "div", class => "ep_sr_content" );	
+	my $contents = $self->{contents};
+	
+	my $title_bar = $session->make_element( "div", class => "ep_sr_title_bar" ); 
+	my $title = $session->make_element( "div", class => "ep_sr_title" );
+	my $text = "Component (Default)";
+	if( defined $self->get_attribute( "type" ) )
+	{
+		my $type = $self->get_attribute( "type" );
+		$text = "Component (".$type.")";
+	}
+
+	$title->appendChild( $session->make_text( $text ) ); 
+	$title_bar->appendChild( $title );
+	$cont_div->appendChild( $title_bar );
+
+	if( $self->get_attribute( "type" ) eq "XHTML" )
+	{
+		$cont_div->appendChild( $session->make_text( EPrints::XML::to_string( $self->{content} ) ) );
+	}
+	else
+	{
+		foreach my $content ( @$contents )
+		{
+			$cont_div->appendChild( $content->render( $session ) );	
+		}
+	}
+	$out->appendChild( $cont_div );
+	return $out;	
+}
+
+sub new_from_dom
+{
+	my( $class, $dom ) = @_;
+	my $element;
+	
+	if( $dom->getAttribute("type") eq "XHTML" )
+	{
+		$element = EPrints::Plugin::Screen::Admin::WorkflowEdit::WorkflowElement::new_from_dom( $class, $dom, 1 );
+		$element->{content} = EPrints::XML::contents_of($dom);
+	}
+	else
+	{
+		$element = EPrints::Plugin::Screen::Admin::WorkflowEdit::WorkflowElement::new_from_dom( $class, $dom, 0 );
+	}
+	return $element;
+}
+
+sub to_dom
+{
+	my( $self, $session ) = @_;
+	my $element;
+
+	if( $self->get_attribute( "type") eq "XHTML" )
+	{
+		$element = $self->SUPER::to_dom( $session, 1 );
+		$element->getFirstChild()->appendChild( $self->{content} );
+	}
+	else
+	{
+		$element = $self->SUPER::to_dom( $session, 0 );
+	}
+	return $element;
+}	
+
 package EPrints::Plugin::Screen::Admin::WorkflowEdit::FieldElement;
 our @ISA = ( 'EPrints::Plugin::Screen::Admin::WorkflowEdit::WorkflowElement' );
+	
+sub new
+{
+	my( $class ) = @_;
+	my $self = $class->SUPER::new();
+	
+	$self->{tag} = "field";
+	$self->{exp_contents} = 
+	{
+		"HelpElement" => [0, "*"],
+	};
+	
+	$self->{exp_attrs} = {
+		"ref" => [1], 
+		"input_lookup_url" => [1], 
+		"input_lookup_params" => [1], 
+		"options" => [1], 
+		"required" => [1], 
+	};
+
+	return $self;
+}
+
+sub render
+{
+	my( $self, $session ) = @_;
+
+	my $out = $session->make_element( "div", class => "we_field" ); 
+	
+	
+	foreach my $condition ( @{$self->{conditions}} )
+	{
+		my $test = $condition->get_attribute( "test" );
+		my $cond = $session->make_element( "div", class => "we_conditional" );
+		$cond->appendChild( $session->make_text( "Condition: ".$test ) );
+		$out->appendChild( $cond );
+	}
+	
+	$out->appendChild( $session->make_text( "Field: ".$self->get_attribute( "ref" ) ) );
+	
+	my $contents = $self->{contents};
+	foreach my $content ( @$contents )
+	{
+		$out->appendChild( $content->render( $session ) );	
+	}
+	return $out;	
+}
+
 
 package EPrints::Plugin::Screen::Admin::WorkflowEdit::DataElement;
 our @ISA = ( 'EPrints::Plugin::Screen::Admin::WorkflowEdit::WorkflowElement' );
 
+sub new
+{
+	my( $class ) = @_;
+	my $self = $class->SUPER::new();
+	$self->{tag} = "";
+	$self->{content} = "";
+	return $self;
+}
+
+sub render
+{
+	my( $self, $session ) = @_;
+
+	my $out = $session->make_element( "div", class => "we_title" );
+	
+	foreach my $condition ( @{$self->{conditions}} )
+	{
+		my $test = $condition->get_attribute( "test" );
+		my $cond = $session->make_element( "div", class => "we_conditional" );
+		$cond->appendChild( $session->make_text( "Condition: ".$test ) );
+		$out->appendChild( $cond );
+	}
+	$out->appendChild( $self->{content} );
+	return $out;	
+}
+
+
+sub new_from_dom
+{
+	my( $class, $dom ) = @_;
+	my $element = $class->new();
+	$element->{content} = EPrints::XML::contents_of($dom);
+	return $element;
+}
+
+sub to_dom
+{
+	my( $self, $session ) = @_;
+	my $element = $self->SUPER::to_dom( $session );
+	$element->getFirstChild()->appendChild( $self->{content} );
+	return $element;
+}	
+
+
 package EPrints::Plugin::Screen::Admin::WorkflowEdit::HelpElement;
 our @ISA = ( 'EPrints::Plugin::Screen::Admin::WorkflowEdit::DataElement' );
 
+sub new
+{
+	my( $class ) = @_;
+	my $self = $class->SUPER::new();
+	$self->{tag} = "help";
+	return $self;
+}
+
 package EPrints::Plugin::Screen::Admin::WorkflowEdit::TitleElement;
 our @ISA = ( 'EPrints::Plugin::Screen::Admin::WorkflowEdit::DataElement' );
+
+sub new
+{
+	my( $class ) = @_;
+	my $self = $class->SUPER::new();
+	$self->{tag} = "title";
+	return $self;
+}
 
 
 package EPrints::Plugin::Screen::Admin::WorkflowEdit;
@@ -158,22 +610,10 @@ sub render
 	my $session = $self->{session};
 	my $user = $session->current_user;
 
-	$self->normalize( $root );
+	my $norm = $self->normalize( $root );
 
-	# Build a test structure
-
-	my $flow = new EPrints::Plugin::Screen::Admin::WorkflowEdit::FlowElement();
-	my $stage = new EPrints::Plugin::Screen::Admin::WorkflowEdit::StageElement();
-	my $component = new EPrints::Plugin::Screen::Admin::WorkflowEdit::ComponentElement();
-	my $field = new EPrints::Plugin::Screen::Admin::WorkflowEdit::FieldElement();
-
-	$flow->add_element( $stage );
-	$stage->add_element( $component );
-	$component->add_element( $field );
-
-	print STDERR $flow->is_valid()."\n";
-
-	return $session->make_doc_fragment;
+	my $struc = $self->to_structure( $norm ); 
+	return $struc->render( $session );
 }
 
 sub normalize
@@ -182,9 +622,56 @@ sub normalize
 	my $out = $self->{session}->make_doc_fragment;
 
 	my $normed = $self->normalize_element( $root );
+	$self->flatten_ifs( $normed );
 
-	EPrints::XML::tidy( $normed );
-	print EPrints::XML::to_string( $normed );
+	return $normed;
+}
+
+sub flatten_ifs
+{
+	my( $self, $root ) = @_;
+	return unless $root->hasChildNodes();
+	my $children = $root->getChildNodes();
+	foreach my $element ( @$children )
+	{
+		if( $element->getNodeName() eq "if" )
+		{
+			my $test = "(".$element->getAttribute( "test" ).")"; 
+			if( $element->hasChildNodes )
+			{
+				my $children = $element->getChildNodes();
+
+				if( $children->getLength() > 1 )
+				{
+					print STDERR "Tree not normalized\n";
+					return;
+				}
+
+				if( $children->getLength() == 1 )
+				{
+					my $child = $children->item(0);
+					if( $child->getNodeName() eq "if" )
+					{
+						while( $child->getNodeName() eq "if" )
+						{
+							$test .= " and (".$child->getAttribute( "test" ).")";
+							$child = $child->getChildNodes()->item(0);
+						}
+						
+						my $replace = $root->getOwnerDocument()->createElement( "if" );
+						$replace->setAttribute( "test", $test );
+						$replace->appendChild( $child );
+						$self->flatten_ifs( $child );	
+						$root->replaceChild( $replace, $element );
+					}
+				}
+			}
+		}
+		else
+		{
+			$self->flatten_ifs( $element );
+		}
+	}
 }
 
 sub normalize_element
@@ -240,6 +727,16 @@ sub normalize_element
 		}
 	}
 	return $out;
+}
+
+sub to_structure
+{
+	my( $self, $root ) = @_;
+
+	my $workflow = $root->getElementsByTagName( "workflow" );
+	my $el = EPrints::Plugin::Screen::Admin::WorkflowEdit::WorkflowElement::element_from_dom( $workflow->item(0) );
+
+	return $el;
 }
 
 sub normalize_choose
