@@ -6244,3 +6244,8 @@ PACKAGE: 2.2.99.2
 
 2007-02-12 cjg
  * Added an abort to the soap tool in case of no request.
+
+2007-02-12 moj
+ * WorkflowEdit now has a render function
+ * Nested ifs are now collapsed
+ * Special case for XHTML component added.
